<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E1CEB2"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/etCodigo"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:background="#FBFBFB"
        android:ems="10"
        android:hint="@string/etCodigo"
        android:inputType="number"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <EditText
        android:id="@+id/etPrecio"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginTop="12dp"
        android:background="#FBFBFB"
        android:ems="10"
        android:hint="@string/etPrecio"
        android:inputType="numberDecimal"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/tvPrecio"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/etDescripcion"
        app:layout_constraintTop_toBottomOf="@+id/etDescripcion" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/tvDescripcion"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/etCodigo"
        app:layout_constraintTop_toBottomOf="@+id/etCodigo" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="220dp"
        android:text="@string/tvCodigo"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etDescripcion"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginTop="4dp"
        android:background="#FBFBFB"
        android:ems="10"
        android:hint="@string/etDescripcion"
        android:inputType="textPersonName"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <Button
        android:id="@+id/btnCrear"
        android:layout_width="175dp"
        android:layout_height="55dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="45dp"
        android:onClick="crear"
        android:text="@string/btnCrear"
        android:textSize="22sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etPrecio" />

    <Button
        android:id="@+id/btnConsultar"
        android:layout_width="175dp"
        android:layout_height="55dp"
        android:layout_marginTop="30dp"
        android:onClick="buscar"
        android:text="@string/btnConsultar"
        android:textSize="22sp"
        app:layout_constraintStart_toStartOf="@+id/btnCrear"
        app:layout_constraintTop_toBottomOf="@+id/btnCrear" />

    <Button
        android:id="@+id/btnModificar"
        android:layout_width="175dp"
        android:layout_height="55dp"
        android:layout_marginTop="45dp"
        android:layout_marginEnd="30dp"
        android:onClick="modificar"
        android:text="@string/btnModificar"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etPrecio" />

    <Button
        android:id="@+id/btnEliminar"
        android:layout_width="175dp"
        android:layout_height="55dp"
        android:layout_marginTop="30dp"
        android:onClick="eliminar"
        android:text="@string/btnEliminar"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="@+id/btnModificar"
        app:layout_constraintStart_toStartOf="@+id/btnModificar"
        app:layout_constraintTop_toBottomOf="@+id/btnModificar" />

</androidx.constraintlayout.widget.ConstraintLayout>